TYNSTEP-1400 Fixed spacing for search results

--- a/step-web/src/main/webapp/scss/search_display.scss
+++ b/step-web/src/main/webapp/scss/search_display.scss
@@ -23,6 +23,10 @@
     padding: 0;
     height: auto !important;
 
+    &:after {
+      display: none;
+    }
+
     &.hbFont {
       text-align: right;
     }
